crates/ruff_linter/src/message/snapshots/ruff_linter__message__json__tests__output.snap
---
source: crates/ruff_linter/src/message/json.rs
expression: content
---
[
  {
    "cell": null,
    "code": "F401",
    "end_location": {
      "column": 10,
      "row": 1
    },
    "filename": "/fib.py",
    "fix": {
      "applicability": "unsafe",
      "edits": [
        {
          "content": "",
          "end_location": {
            "column": 1,
            "row": 2
          },
          "location": {
            "column": 1,
            "row": 1
          }
        }
      ],
      "message": "Remove unused import: `os`"
    },
    "location": {
      "column": 8,
      "row": 1
    },
    "message": "`os` imported but unused",
    "noqa_row": 1,
    "url": "https://docs.astral.sh/ruff/rules/unused-import"
  },
  {
    "cell": null,
    "code": "F841",
    "end_location": {
      "column": 6,
      "row": 6
    },
    "filename": "/fib.py",
    "fix": {
      "applicability": "unsafe",
      "edits": [
        {
          "content": "",
          "end_location": {
            "column": 10,
            "row": 6
          },
          "location": {
            "column": 5,
            "row": 6
          }
        }
      ],
      "message": "Remove assignment to unused variable `x`"
    },
    "location": {
      "column": 5,
      "row": 6
    },
    "message": "Local variable `x` is assigned to but never used",
    "noqa_row": 6,
    "url": "https://docs.astral.sh/ruff/rules/unused-variable"
  },
  {
    "cell": null,
    "code": "F821",
    "end_location": {
      "column": 5,
      "row": 1
    },
    "filename": "/undef.py",
    "fix": null,
    "location": {
      "column": 4,
      "row": 1
    },
    "message": "Undefined name `a`",
    "noqa_row": 1,
    "url": "https://docs.astral.sh/ruff/rules/undefined-name"
  }
]
